syntax = "proto3";

package pb;

option go_package = "github.com/zvash/bgmood-auth-service/pb";

message ResetPasswordRequest {
  string token = 1;
  string password = 2;
  string password_confirmation = 3;
}

message ResetPasswordResponse {
  string message = 1;
}